A bare-bones website about Alan Alda as Captian Hawkeye Pierce

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hey all!
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="author" content="Tanner Garrett" />
+		<meta name="description" content="Information on Captain &quot;Hawkeye&quot; Pierce" />
+		<link rel="stylesheet" type="text/css" href="css/main.css" />
+		<title>Captain Benjamin "Hawkeye" Pierce</title>
+	</head>
+
+	<body>
+		<h1>Captain Benjamin Franklin "Hawkeye" Pierce, B.S., M.D.</h1>
+		<p>
+			<img src="img\Alan_Alda_Hawkeye_MASH.jpg" />Captain "Hawkeye" Pierce is the lead protagonist in the television series M*A*S*H. Hawkeye is a young man who, shortly after completing his medical residency in Boston, was drafted into the U.S. Army Medical Corps and served the 4077th Mobile Army Surgical Hospital (see the name of the series) during the Korean War. Somewhat of a womanizer, he spends his time after long, stressful hours of treating mortally wounded soldiers by drinking and pulling pranks on other people in his unit. Despite of his seemingly carefree and frivolous attitude at times, he has a habit of expressing his deeper, more serious views on war and humanity.
+		</p>
+		<p>
+			<a href="http://en.wikipedia.org/wiki/List_of_M*A*S*H_characters#Hawkeye_Pierce/" alt="Alan Alda as Captain Benjamin &quot;Hawkeye&quot; Pierce">M*A*S*H</a> 
+		</p>
+	</body>
+</html>
