Some last touch-ups on the HTML and CSS of the web site

--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+	Author: Tanner Garrett
+	Date: 10/2/2014
+	TA: Zachary Balter
+	This document contains all the HTML required to create the layout of a page on Captain "Hawkeye" Pierce.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -12,7 +19,7 @@
 		<h1>Captain Benjamin Franklin "Hawkeye" Pierce, B.S., M.D.</h1>
 		<div id="maindiv">
 			<p>
-				<img src="http://students.washington.edu/tg71223/info343/files-challenge/img/Alan_Alda_Hawkeye_MASH.jpg" alt="Alan Alda as Captain Benjamin Hawkeye Pierce" />
+				<img src="http://students.washington.edu/tg71223/info343/files-challenge/img/Alan_Alda_Hawkeye_MASH.JPG" alt="Alan Alda as Captain Benjamin Hawkeye Pierce" />
 				Captain "Hawkeye" Pierce is the lead protagonist in the television series M*A*S*H. Hawkeye is a young man who, shortly after completing his medical residency in Boston, was drafted into the U.S. Army Medical Corps and served the 4077th Mobile Army Surgical Hospital (see the name of the series) during the Korean War. Somewhat of a womanizer, he spends his time after long, stressful hours of treating mortally wounded soldiers by drinking and pulling pranks on other people in his unit. Despite of his seemingly carefree and frivolous attitude at times, he has a habit of expressing his deeper, more serious views on war and humanity.
 			</p>
 			<p>
