Added some more information in the paragraph with the name of the show in it. Also increased the max width of the content div to 1100 px to compensate

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				Captain "Hawkeye" Pierce is the lead protagonist in the television series M*A*S*H. Hawkeye is a young man who, shortly after completing his medical residency in Boston, was drafted into the U.S. Army Medical Corps and served the 4077th Mobile Army Surgical Hospital (see the name of the series) during the Korean War. Somewhat of a womanizer, he spends his time after long, stressful hours of treating mortally wounded soldiers by drinking and pulling pranks on other people in his unit. Despite of his seemingly carefree and frivolous attitude at times, he has a habit of expressing his deeper, more serious views on war and humanity.
 			</p>
 			<p>
-				<a href="http://en.wikipedia.org/wiki/List_of_M*A*S*H_characters#Hawkeye_Pierce/">M*A*S*H</a> 
+				Captain "Hawkeye" Pierce is a character played by Alan Alda on a TV series called <a href="http://en.wikipedia.org/wiki/List_of_M*A*S*H_characters#Hawkeye_Pierce/">M*A*S*H</a>, which aired from 1972 to 1983. 
 			</p>
 		</div>
 	</body>
